--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,20 @@
      <artifactId>spring-security-core</artifactId>
      <version>5.1.6.RELEASE</version>
    </dependency>
+
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+    <version>3.4.1</version>
+</dependency>
+
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.33</version>
+</dependency>
+
+
  </dependencies>
 
 	<build>
