--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,13 @@ spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 spring.mvc.static-path-pattern=/**
 
+spring.datasource.url=jdbc:mysql://avnadmin:AVNS_r5vpU3s2E-xrIWcrJdx@cms-dev-cms-v-dev.h.aivencloud.com:20445/cms?ssl-mode=REQUIRED
+spring.datasource.username=avnadmin
+spring.datasource.password=AVNS_r5vpU3s2E-xrIWcrJdx
+
+
 server.port=8080
 server.session.timeout=5
+server.servlet.contextPath=/cms
 
 logging.level.org.springframework.web=DEBUG
