--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,11 @@
     <version>8.0.33</version>
 </dependency>
 
+<dependency>
+  <groupId>com.fasterxml.jackson.datatype</groupId>
+  <artifactId>jackson-datatype-jsr310</artifactId>
+</dependency>
+
 
  </dependencies>
 
