--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,14 @@ spring.jackson.serialization.fail-on-empty-beans=false
 spring.datasource.url=jdbc:mysql://avnadmin:AVNS_r5vpU3s2E-xrIWcrJdx@cms-dev-cms-v-dev.h.aivencloud.com:20445/cms?ssl-mode=REQUIRED
 spring.datasource.username=avnadmin
 spring.datasource.password=AVNS_r5vpU3s2E-xrIWcrJdx
-
+server.servlet.context-path=/cms
 
 server.port=8080
 server.session.timeout=5
 
 logging.level.org.springframework.web=DEBUG
+
+# Path where uploaded images will be stored
+# file.upload-dir=D:/images
+file.upload-dir=/images
+#C:\Users\santh\cms_devs\src\main\images
